# daily-bible-share

./: .gitmessage  AGENTS.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflow/: branch-name-lint.yml
.github/workflows/: pr-title-lint.yml
app/: __init__.py  main.py
